--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -47,6 +47,7 @@ num-traits = "0.2.14"
 rand = "0.8.4"
 rand_chacha = "0.3.1"
 reef = { git = "https://github.com/EspressoSystems/reef.git" }
+regex = "1.5.5"
 serde = { version = "1.0.124", features = ["derive"] }
 serde_json = "1.0.67"
 sha3 = "0.9.1"
