--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "minimal-relayer"
+path = "src/bin/minimal-relayer.rs"
+doc = false
+
 [dependencies]
 async-std = { version = "1.10.0", features = ["unstable", "attributes", "tokio1"] }
 bincode = "1.3.3"
