--- a/eqs/Cargo.toml
+++ b/eqs/Cargo.toml
@@ -8,13 +8,13 @@ license = "GPL-3.0-or-later"
 
 [dependencies]
 async-std = { version = "1.10.0", features = ["unstable", "attributes", "tokio1"] }
-atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", version = "0.1.0" }
+atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
 dirs = "4.0"
 # may switch to `ethers = "0.6.2"` in the future; keeping this for compatibility for now
-ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+ethers = { git = "https://github.com/gakonst/ethers-rs" }
 
 jf-cap = { features = ["std"], git = "https://github.com/EspressoSystems/cap.git" }
 jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
