--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -20,7 +20,7 @@ async-std = "1.10.0"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 cape_wallet = { path = "../wallet" }
-ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+ethers = { git = "https://github.com/gakonst/ethers-rs" }
 futures = "0.3.0"
 hex = "0.4.3"
 
