--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -9,6 +9,14 @@ license = "GPL-3.0-or-later"
 name = "wallet-api"
 path = "src/wallet-api/main.rs"
 
+[[bin]]
+name = "random-wallet"
+doc = false
+
+[[bin]]
+name = "random-wallet-in-mem"
+doc = false
+
 [dependencies]
 address_book = { path = "../address_book" }
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
