--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -14,6 +14,7 @@ name = "faucet-wallet-test-setup"
 path = "src/faucet_wallet_test_setup.rs"
 
 [dependencies]
+ark-std = "0.3.0"
 
 async-std = "1.10.0"
 bincode = "1.3.3"
@@ -30,6 +31,7 @@ rand = "0.8.5"
 rand_chacha = "0.3.1"
 seahorse = { git = "https://github.com/EspressoSystems/seahorse.git" }
 serde = "1.0.136"
+serde_json = "1.0.67"
 snafu = "0.7.0"
 structopt = "0.3.26"
 surf = "2.3.2"
@@ -40,3 +42,5 @@ tracing = "0.1.26"
 tracing-futures = "0.2"
 tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+
