--- a/eqs/Cargo.toml
+++ b/eqs/Cargo.toml
@@ -8,7 +8,7 @@ license = "GPL-3.0-or-later"
 
 [dependencies]
 async-std = { version = "1.10.0", features = ["unstable", "attributes", "tokio1"] }
-atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git" }
+atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", version = "0.1.0" }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
