Misc doc cleanup (#877)
* Misc doc cleanup

- Add README.md to all crates. Include them as crate doc where it makes
  sense. A problem here is that the markdown links don't work.
- Make sure all crates (except random wallet test) have at least a one
  sentence summary in cargo doc.
- Add some missing copyright headers.

* Don't execute console code blocks as rust code
* Show captured stdout if hardhat deploy test fails
* Avoid file name collision warnings with cargo doc 
  (by not specifying ethers master branch)
* Don't generate doc for minimal relayer binary

- Don't specify masters branch for ethers dependency.
- Use the same version specifier for atomic store in all crates.

* Exclude utility binaries from cargo doc
* Remove outdated comments about ethers version

--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -9,6 +9,14 @@ license = "GPL-3.0-or-later"
 name = "wallet-api"
 path = "src/wallet-api/main.rs"
 
+[[bin]]
+name = "random-wallet"
+doc = false
+
+[[bin]]
+name = "random-wallet-in-mem"
+doc = false
+
 [dependencies]
 address_book = { path = "../address_book" }
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
@@ -20,7 +28,7 @@ commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" 
 eqs = { path = "../eqs" }
 escargot = "0.5.2"
 espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros" }
-ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+ethers = { git = "https://github.com/gakonst/ethers-rs" }
 futures = "0.3.0"
 futures-util = "0.3.8"
 itertools = "0.10.3"
