--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -10,10 +10,10 @@ default-run = "address-book"
 [[bin]]
 name = "address-book"
 path = "src/main.rs"
+doc = false
 
 [dependencies]
 async-std = { version = "1.6.0", features = ["attributes"] }
-atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git" }
 bincode = "1.3.3"
 dirs = "4.0.0"
 futures = "0.3.21"
