--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -8,10 +8,20 @@ license = "GPL-3.0-or-later"
 [[bin]]
 name = "faucet"
 path = "src/faucet.rs"
+doc = false
 
 [[bin]]
 name = "faucet-wallet-test-setup"
 path = "src/faucet_wallet_test_setup.rs"
+doc = false
+
+[[bin]]
+name = "faucet-gen-typescript"
+doc = false
+
+[[bin]]
+name = "faucet-shower"
+doc = false
 
 [dependencies]
 ark-std = "0.3.0"
@@ -20,7 +30,7 @@ async-std = "1.10.0"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 cape_wallet = { path = "../wallet" }
-ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+ethers = { git = "https://github.com/gakonst/ethers-rs" }
 futures = "0.3.0"
 hex = "0.4.3"
 
