--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -6,12 +6,16 @@ edition = "2021"
 license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "minimal-relayer"
+path = "src/bin/minimal-relayer.rs"
+doc = false
+
 [dependencies]
 async-std = { version = "1.10.0", features = ["unstable", "attributes", "tokio1"] }
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
-# may switch to `ethers = "0.6.2"` in the future; keeping this for compatibility for now
-ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
+ethers = { git = "https://github.com/gakonst/ethers-rs" }
 
 jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git" }
 jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
