--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Espresso Systems <hello@espressosys.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 md-toc = "^8.1.1"
+pre-commit-hooks = {git = "https://github.com/Lucas-C/pre-commit-hooks"}
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
