--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,6 +107,9 @@ jobs:
           name: wallet-webserver
           path: wallet-checkout/target/release/
 
+      - name: Set linker/loader to not be nix
+        run: patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 ./wallet-checkout/target/release/wallet-api
+
       - uses: docker/setup-buildx-action@v1
         name: Setup Docker BuildKit (buildx)
         with:
@@ -125,9 +128,6 @@ jobs:
         id: meta
         with:
           images: ghcr.io/espressosystems/cape/wallet
-
-      - name: Generate base image
-        run: cd wallet-checkout && bin/build-docker-base
 
       - uses: docker/build-push-action@v2
         name: Build and Push Docker
