--- a/faucet/Cargo.toml
+++ b/faucet/Cargo.toml
@@ -46,7 +46,7 @@ key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
 net = { git = "https://github.com/EspressoSystems/net.git" }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
-seahorse = { git = "https://github.com/EspressoSystems/seahorse.git" }
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "jeb-fee-input" }
 serde = "1.0.136"
 serde_json = "1.0.67"
 snafu = "0.7.0"
