--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -53,7 +53,7 @@ rand_chacha = "0.3.1"
 reef = { git = "https://github.com/EspressoSystems/reef.git" }
 regex = "1.5.4"
 relayer = { path = "../relayer", features = ["testing"] }
-seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", features = ["testing"] }
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "jeb-fee-input", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
@@ -76,9 +76,11 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
 ark-serialize = "0.3.0"
+reef = { git = "https://github.com/EspressoSystems/reef.git", features = ["testing"] }
+seahorse = { git = "https://github.com/EspressoSystems/seahorse.git", branch = "jeb-fee-input", features = ["testing"] }
 tracing-test = "0.2.1"
 
 [features]
 default = ["testing"]
-testing = []
+testing = ["reef/testing", "seahorse/testing"]
 slow-tests = []
