--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -24,14 +24,14 @@ bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 ethers = { git = "https://github.com/gakonst/ethers-rs" }
 
-jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git" }
-jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
-key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
+jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.2" }
+jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
+key-set = { git = "https://github.com/EspressoSystems/key-set.git", tag = "0.2.2" }
 
 lazy_static = "1.4.0"
-net = { git = "https://github.com/EspressoSystems/net.git" }
+net = { git = "https://github.com/EspressoSystems/net.git", tag = "0.2.1" }
 rand_chacha = { version = "0.3.1", features = ["serde1"] }
-reef = { git = "https://github.com/EspressoSystems/reef.git" }
+reef = { git = "https://github.com/EspressoSystems/reef.git", tag = "0.2.1" }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
