--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -23,6 +23,7 @@ async-std = { version = "1.10.0", features = ["unstable", "attributes", "tokio1"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 ethers = { git = "https://github.com/gakonst/ethers-rs" }
+futures = "0.3.21"
 
 jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.2" }
 jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.0" }
