Run two wallet APIs for demo purposes
Close #983

--- a/demo/compose.env
+++ b/demo/compose.env
@@ -4,6 +4,7 @@ CAPE_ADDRESS_BOOK_PORT=50000
 CAPE_EQS_PORT=50010
 CAPE_FAUCET_PORT=50030
 CAPE_RELAYER_PORT=50020
-CAPE_WALLET_PORT=50040
+CAPE_WALLET_PORT_ALICE=50040
+CAPE_WALLET_PORT_BOB=50041
 CAPE_RELAYER_WALLET_MNEMONIC="test test test test test test test test test test test junk"
 CAPE_FAUCET_WALLET_MNEMONIC="test test test test test test test test test test test junk"
