--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: [self-hosted, X64]
     container:
       image: ghcr.io/espressosystems/nix:main
       volumes:
@@ -94,7 +94,7 @@ jobs:
             target/release/minimal-relayer
 
   docker-wallet:
-    runs-on: self-hosted
+    runs-on: [self-hosted, X64]
     needs: build
     steps:
       - uses: actions/checkout@v2
@@ -140,7 +140,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   docker-services:
-    runs-on: self-hosted
+    runs-on: [self-hosted, X64]
     needs: build
     steps:
       - uses: actions/checkout@v2
