--- a/.github/workflows/testnet-build.yml
+++ b/.github/workflows/testnet-build.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build for running tests against Rinkeby testnet # TODO: this workflow can probably be deduped as most of it mirrors the build from build.yml
     strategy:
       fail-fast: true
-    runs-on: self-hosted
+    runs-on: [self-hosted, X64]
     container:
       image: ghcr.io/espressosystems/nix:main
       volumes:
