--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ md-toc = "^8.1.1"
 pre-commit-hooks = {git = "https://github.com/Lucas-C/pre-commit-hooks"}
 
 [tool.poetry.dev-dependencies]
-black = "^21.9b0"
+black = "*"
 hdwallet = "^1.3.2"
 ipython = "^7.28.0"
 slither-analyzer = "^0.8.3"
