--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
       - uses: actions/checkout@v2
         name: Checkout Repository
 
+      - name: Work around git issue after git CVE-2022-24765 fix.
+        run: git config --global --add safe.directory "$PWD"
+
       - name: Initialize Nix Shell
         run: nix-shell --run "echo Init"
 
